# sunny

./: .gitignore  Cargo.toml  Dockerfile-build  LICENSE  README.md  build.sh  build_for_raspberry.sh
frontend/sunny-ui/: index.html  package-lock.json  package.json  vite.config.ts
frontend/sunny-ui/src/: App.tsx  index.css
src/: main.rs  sunny.service
sunny_db/: Cargo.toml
sunny_db/src/: lib.rs  statistics.rs  timeseries.rs  timeseries_db.rs
sunny_db/tests/: read-data-perf.rs  stress-test.rs  test-non-empty-db.rs
sunny_db/tests/db-test/data/: 1716560570868-1716560740859  1716560747216-1716560807226  1716580751735-1716581236734  1716661847780-1716662292759  1716662435180-1716662500202  1716662506199-1716663001211  1716663006197-1716663501205  1716663506206-1716664001206  1716664006205-1716664501205  1716664506199-1716665001212  1716665006203-1716665501203  1716665506199-1716666001207  1717010111628-1717010606622  1717010611633-1717011106627  1717011111628-1717011606627  1717011611636-1717012106630  1717012111632-1717012606628  1717012611625-1717013106624  1717013111614-1717013606622  1717013611623-1717014106640  1717014111634-1717014606634  1717137613559-1717138108561  1717138113556-1717138608557  1717138613557-1717139108557  1717139113552-1717139608557  1717139613558-1717140108559  1717140113551-1717140608575  1717140613560-1717141108567  1717141113545-1717141608547  1717141613549-1717142108562  1717142113552-1717142608551  1717142613556-1717143108571  1717143113553-1717143608562  1717143613554-1717144108555  1717144113554-1717144608557  (+28 more)
