workspace = { members = [ "sunny_db" ] }
[package]
name = "sunny"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
sunny_db = { version = "0.1.0", path = "sunny_db" }
tokio = { version = "1.37.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
