workspace = { members = [ "sunny_db" ] }
[package]
name = "sunny"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
bitcode = "0.6.0"
clap = { version = "4.5.4", features = ["derive"] }
openssl = { version = "0.10.64", features = ["vendored"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
sunny_db = { version = "0.1.0", path = "sunny_db" }
tokio = { version = "1.37.0", features = ["sync", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
